# amane

./: ChangeLog  README.ja.rst  README.md  README.rst  requirements.txt  setup.cfg
amane/: const.py  db.py
amane/cmd/: ctl.py  reporter.py  reviewer.py  smtpd.py
amane/tests/: fake_db.py  test_ctl.py  test_db.py  test_reporter.py  test_reviewer.py  test_smtpd.py
sample/: amane.conf  reporter.conf  reviewer.conf  smtpd.conf  tempml.conf  tenant.conf
tempml/: __main__.py  const.py  db.py  log.py  skelton.py
tempml/cmd/: ctl.py  reporter.py  reviewer.py  smtp_handler.py  smtpd.py
tempml/tests/: dummy_admin_file  fake_db.py  fake_smtpd.py  test_ctl.py  test_db.py  test_reporter.py  test_reviewer.py  test_smtp_handler.py  test_smtpd.py
