[metadata]
name = tempml
summary = Temporary Mailing List Manager
description-file = 
	README.rst
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
home-page = https://github.com/yosshy/python-tempml
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5

[files]
packages = 
	tempml

[entry_points]
console_scripts = 
	tempml_smtp_handler = tempml.cmd.smtp_handler:main

[wheel]
universal = 1
