[metadata]
name = tempml
summary = Temporary Mailing List Manager
description-file = 
	README.rst
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
home-page = https://github.com/yosshy/python-tempml
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4

[files]
packages = 
	tempml

[entry_points]
console_scripts = 
	tempml_smtpd = tempml.cmd.smtpd:main
	tempml_reporter = tempml.cmd.reporter:main
	tempml_reviewer = tempml.cmd.reviewer:main

[wheel]
universal = 1
