[metadata]
name = amane
summary = Temporary Mailing List Manager
description-file = 
	README.rst
author = Akira Yoshiyama
author-email = akirayoshiyama@gmail.com
home-page = https://github.com/yosshy/python-amane
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4

[files]
packages = 
	amane

[entry_points]
console_scripts = 
	amanectl = amane.cmd.ctl:cli
	amane_smtpd = amane.cmd.smtpd:main
	amane_reporter = amane.cmd.reporter:main
	amane_reviewer = amane.cmd.reviewer:main

[wheel]
universal = 1
